--- a/index.html
+++ b/index.html
@@ -77,3 +77,50 @@
   <img src="assets/stickers/sticker1.png" alt="Sticker 1">
   <img src="assets/stickers/sticker2.png" alt="Sticker 2">
 </section>
+
+<section id="work-resources">
+  <h2>My Work & Resources</h2>
+
+  <div id="project-screenshots">
+    <h3>Project Screenshots</h3>
+  </div>
+
+  <div id="video-editing">
+    <h3>Video Editing</h3>
+  </div>
+
+  <div id="ebooks-presentations">
+    <h3>Ebooks & Presentations</h3>
+    <ul>
+      <li><a href="assets/ebooks/ebook1.pdf" target="_blank" class="btn">Download Ebook 1</a></li>
+      <li><a href="assets/ebooks/ebook2.pdf" target="_blank" class="btn">Download Ebook 2</a></li>
+    </ul>
+  </div>
+
+  <div id="stickers-graphics">
+    <h3>Stickers & Graphics</h3>
+    <ul>
+      <li>Sticker 1</li>
+      <li>Sticker 2</li>
+    </ul>
+  </div>
+</section>
+
+<section id="featured-projects">
+  <h2>Featured Projects</h2>
+
+  <div class="project-card">
+    <h3><a href="project1.html">Project 1</a></h3>
+    <p>Project 1 description</p>
+  </div>
+
+  <div class="project-card">
+    <h3><a href="project2.html">Project 2</a></h3>
+    <p>Project 2 description</p>
+  </div>
+
+  <div class="project-card">
+    <h3><a href="project3.html">Project 3</a></h3>
+    <p>Project 3 description</p>
+  </div>
+</section>
