--- a/index.html
+++ b/index.html
@@ -1,40 +1,72 @@
-<section id="assets">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>BrightLearn Portfolio</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+<!-- Landing Page -->
+<section id="landing">
+  <h1>Welcome to BrightLearn!</h1>
+  <div class="landing-buttons">
+    <button onclick="alert('API Services will be here')">Buy Data / Airtime / Electricity</button>
+    <button onclick="alert('Portfolio will be shown here')">View My Portfolio</button>
+  </div>
+</section>
+
+<!-- Portfolio Section -->
+<section id="portfolio">
   <h2>My Work & Resources</h2>
-  <!-- Project Images -->
-  <div class="assets-category" id="images">
-    <h3>Project Screenshots</h3>
-    <div class="assets-gallery">
-      <div class="asset-card"></div>
-      <div class="asset-card"></div>
-      <div class="asset-card"></div>
+
+  <div id="projects">
+    <h3>Featured Projects</h3>
+    <div class="project-card">
+      <h4>Project 1</h4>
+      <p>Project 1 description</p>
+      <button onclick="alert('Project 1 clicked')">View Project</button>
+    </div>
+    <div class="project-card">
+      <h4>Project 2</h4>
+      <p>Project 2 description</p>
+      <button onclick="alert('Project 2 clicked')">View Project</button>
+    </div>
+    <div class="project-card">
+      <h4>Project 3</h4>
+      <p>Project 3 description</p>
+      <button onclick="alert('Project 3 clicked')">View Project</button>
     </div>
   </div>
 
-  <!-- Videos -->
-  <div class="assets-category" id="videos">
-    <h3>Video Editing</h3>
-    <div class="assets-gallery">
-      <div class="asset-card video-card"></div>
-      <div class="asset-card video-card"></div>
-    </div>
-  </div>
-
-  <!-- Ebooks / PDFs -->
-  <div class="assets-category" id="ebooks">
+  <div id="resources">
     <h3>Ebooks & Presentations</h3>
-    <div class="assets-gallery">
-      <div class="asset-card pdf-card"></div>
-      <div class="asset-card pdf-card"></div>
-    </div>
-  </div>
+    <ul>
+      <li><button onclick="alert('Download Ebook 1')">Download Ebook 1</button></li>
+      <li><button onclick="alert('Download Ebook 2')">Download Ebook 2</button></li>
+    </ul>
 
-  <!-- Stickers / Graphics -->
-  <div class="assets-category" id="stickers">
     <h3>Stickers & Graphics</h3>
-    <div class="assets-gallery">
-      <div class="asset-card sticker-card"></div>
-      <div class="asset-card sticker-card"></div>
-    </div>
+    <ul>
+      <li><button onclick="alert('Sticker 1 clicked')">Sticker 1</button></li>
+      <li><button onclick="alert('Sticker 2 clicked')">Sticker 2</button></li>
+    </ul>
+
+    <h3>Video Editing</h3>
+    <p>Video placeholders / links</p>
+  </div>
+</section>
+
+<!-- API Section -->
+<section id="api-services">
+  <h2>API Services</h2>
+  <p>Placeholder for future API integrations (Data, Airtime, Electricity etc.)</p>
+  <button onclick="alert('Back to Landing')">Back</button>
+</section>
+
+</body>
+</html>    </div>
   </div>
 </section>
 
