--- a/index.html
+++ b/index.html
@@ -236,6 +236,6 @@ function backToLanding() {
   document.getElementById('landing').style.display = 'block';
 }
 </script>
-
+<script src="script.js"></script>
 </body>
 </html>
