--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   <p>Placeholder for future API integrations (Data, Airtime, Electricity etc.)</p>
   <button onclick="alert('Back to Landing')">Back</button>
 </section>
-
+<button onclick="showSuccess()">Buy Data</button>
 </body>
 </html>    </div>
   </div>
