--- a/index.html
+++ b/index.html
@@ -1,40 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>BrightLearn Portfolio</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
-<!-- Landing Page -->
-<section id="landing">
-  <h1>Welcome to BrightLearn!</h1>
-  <div class="landing-buttons">
-    <button onclick="alert('API Services will be here')">Buy Data / Airtime / Electricity</button>
-    <button onclick="alert('Portfolio will be shown here')">View My Portfolio</button>
-  </div>
-</section>
+  <!-- 🟢 MAIN HEADER -->
+  <header>
+    <h1>Welcome to BrightLearn!</h1>
+    <p>Your one-stop hub for learning, design, and digital solutions.</p>
 
-<!-- Portfolio Section -->
-<section id="portfolio">
-  <h2>My Work & Resources</h2>
+    <button onclick="showSuccess()">Buy Data / Airtime / Electricity</button>
+    <button onclick="window.location.href='#portfolio'">View My Portfolio</button>
+  </header>
 
-  <div id="projects">
-    <h3>Featured Projects</h3>
-    <div class="project-card">
-      <h4>Project 1</h4>
+  <!-- 🟣 FEATURED PROJECTS -->
+  <section id="portfolio">
+    <h2>Featured Projects</h2>
+
+    <div class="project">
+      <h3>Project 1</h3>
       <p>Project 1 description</p>
-      <button onclick="alert('Project 1 clicked')">View Project</button>
+      <a href="#">View Project</a>
     </div>
-    <div class="project-card">
-      <h4>Project 2</h4>
+
+    <div class="project">
+      <h3>Project 2</h3>
       <p>Project 2 description</p>
-      <button onclick="alert('Project 2 clicked')">View Project</button>
+      <a href="#">View Project</a>
     </div>
-    <div class="project-card">
-      <h4>Project 3</h4>
+
+    <div class="project">
+      <h3>Project 3</h3>
+      <p>Project 3 description</p>
+      <a href="#">View Project</a>
+    </div>
+  </section>
+
+  <!-- 🟠 RESOURCES -->
+  <section id="resources">
+    <h2>My Work & Resources</h2>
+
+    <h3>Ebooks & Presentations</h3>
+    <ul>
+      <li><a href="assets/ebooks/ebook1.pdf" target="_blank">Download Ebook 1</a></li>
+      <li><a href="assets/ebooks/ebook2.pdf" target="_blank">Download Ebook 2</a></li>
+    </ul>
+
+    <h3>Stickers & Graphics</h3>
+    <ul>
+      <li>Sticker 1</li>
+      <li>Sticker 2</li>
+    </ul>
+
+    <h3>Video Editing</h3>
+    <p>Video placeholders / links</p>
+  </section>
+
+  <!-- 🔵 FUTURE API SERVICES -->
+  <section id="api">
+    <h2>API Services</h2>
+    <p>Placeholder for future integrations like Data, Airtime, Electricity, etc.</p>
+  </section>
+
+  <script src="script.js"></script>
+</body>
+</html>      <h4>Project 3</h4>
       <p>Project 3 description</p>
       <button onclick="alert('Project 3 clicked')">View Project</button>
     </div>
