--- a/index.html
+++ b/index.html
@@ -4,272 +4,31 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>BrightLearn Portfolio</title>
+
+  <!-- 🌈 Linking the CSS -->
   <link rel="stylesheet" href="style.css" />
 </head>
-<body>
 
-  <!-- 🟢 MAIN HEADER -->
+<body>
   <header>
     <h1>Welcome to BrightLearn!</h1>
-    <p>Your one-stop hub for learning, design, and digital solutions.</p>
-
-    <button onclick="showSuccess()">Buy Data / Airtime / Electricity</button>
-    <button onclick="window.location.href='#portfolio'">View My Portfolio</button>
+    <p>Explore my portfolio or buy data instantly.</p>
+    <button onclick="showSuccess()">Buy Data</button>
+    <button>View My Portfolio</button>
   </header>
 
-  <!-- 🟣 FEATURED PROJECTS -->
-  <section id="portfolio">
+  <section>
     <h2>Featured Projects</h2>
-
-    <div class="project">
-      <h3>Project 1</h3>
-      <p>Project 1 description</p>
-      <a href="#">View Project</a>
-    </div>
-
-    <div class="project">
-      <h3>Project 2</h3>
-      <p>Project 2 description</p>
-      <a href="#">View Project</a>
-    </div>
-
-    <div class="project">
-      <h3>Project 3</h3>
-      <p>Project 3 description</p>
-      <a href="#">View Project</a>
-    </div>
+    <p>Project 1 — UI Design Sample</p>
+    <p>Project 2 — Video Editing Showcase</p>
+    <p>Project 3 — E-book Design</p>
   </section>
 
-  <!-- 🟠 RESOURCES -->
-  <section id="resources">
-    <h2>My Work & Resources</h2>
+  <footer>
+    <p>© 2025 BrightLearn by Ismail Abdullahi Idris</p>
+  </footer>
 
-    <h3>Ebooks & Presentations</h3>
-    <ul>
-      <li><a href="assets/ebooks/ebook1.pdf" target="_blank">Download Ebook 1</a></li>
-      <li><a href="assets/ebooks/ebook2.pdf" target="_blank">Download Ebook 2</a></li>
-    </ul>
-
-    <h3>Stickers & Graphics</h3>
-    <ul>
-      <li>Sticker 1</li>
-      <li>Sticker 2</li>
-    </ul>
-
-    <h3>Video Editing</h3>
-    <p>Video placeholders / links</p>
-  </section>
-
-  <!-- 🔵 FUTURE API SERVICES -->
-  <section id="api">
-    <h2>API Services</h2>
-    <p>Placeholder for future integrations like Data, Airtime, Electricity, etc.</p>
-  </section>
-
+  <!-- ⚡ Linking the JavaScript -->
   <script src="script.js"></script>
-</body>
-</html>      <h4>Project 3</h4>
-      <p>Project 3 description</p>
-      <button onclick="alert('Project 3 clicked')">View Project</button>
-    </div>
-  </div>
-
-  <div id="resources">
-    <h3>Ebooks & Presentations</h3>
-    <ul>
-      <li><button onclick="alert('Download Ebook 1')">Download Ebook 1</button></li>
-      <li><button onclick="alert('Download Ebook 2')">Download Ebook 2</button></li>
-    </ul>
-
-    <h3>Stickers & Graphics</h3>
-    <ul>
-      <li><button onclick="alert('Sticker 1 clicked')">Sticker 1</button></li>
-      <li><button onclick="alert('Sticker 2 clicked')">Sticker 2</button></li>
-    </ul>
-
-    <h3>Video Editing</h3>
-    <p>Video placeholders / links</p>
-  </div>
-</section>
-
-<!-- API Section -->
-<section id="api-services">
-  <h2>API Services</h2>
-  <p>Placeholder for future API integrations (Data, Airtime, Electricity etc.)</p>
-  <button onclick="alert('Back to Landing')">Back</button>
-</section>
-<button onclick="showSuccess()">Buy Data</button>
-</body>
-</html>    </div>
-  </div>
-</section>
-
-<section id="projects">
-  <h2>Featured Projects</h2>
-  <div class="projects-gallery">
-    <div class="project-card">
-      <img src="assets/images/project1.png" alt="Project 1">
-      <p>Project 1 description</p>
-    </div>
-    <div class="project-card">
-      <img src="assets/images/project2.png" alt="Project 2">
-      <p>Project 2 description</p>
-    </div>
-    <div class="project-card">
-      <img src="assets/images/project3.png" alt="Project 3">
-      <p>Project 3 description</p>
-    </div>
-  </div>
-</section>
-
-<section id="videos">
-  <h2>Video Editing</h2>
-  <video controls width="400">
-    <source src="assets/videos/video1.mp4" type="video/mp4">
-  </video>
-  <video controls width="400">
-    <source src="assets/videos/video2.mp4" type="video/mp4">
-  </video>
-</section>
-
-<section id="ebooks">
-  <h2>Ebooks & Presentations</h2>
-  <a href="assets/ebooks/ebook1.pdf" target="_blank">Download Ebook 1</a>
-  <a href="assets/ebooks/ebook2.pdf" target="_blank">Download Ebook 2</a>
-</section>
-
-<section id="graphics">
-  <h2>Stickers & Graphics</h2>
-  <img src="assets/stickers/sticker1.png" alt="Sticker 1">
-  <img src="assets/stickers/sticker2.png" alt="Sticker 2">
-</section>
-
-<section id="work-resources">
-  <h2>My Work & Resources</h2>
-
-  <div id="project-screenshots">
-    <h3>Project Screenshots</h3>
-  </div>
-
-  <div id="video-editing">
-    <h3>Video Editing</h3>
-  </div>
-
-  <div id="ebooks-presentations">
-    <h3>Ebooks & Presentations</h3>
-    <ul>
-      <li><a href="assets/ebooks/ebook1.pdf" target="_blank" class="btn">Download Ebook 1</a></li>
-      <li><a href="assets/ebooks/ebook2.pdf" target="_blank" class="btn">Download Ebook 2</a></li>
-    </ul>
-  </div>
-
-  <div id="stickers-graphics">
-    <h3>Stickers & Graphics</h3>
-    <ul>
-      <li>Sticker 1</li>
-      <li>Sticker 2</li>
-    </ul>
-  </div>
-</section>
-
-<section id="featured-projects">
-  <h2>Featured Projects</h2>
-
-  <div class="project-card">
-    <h3><a href="project1.html">Project 1</a></h3>
-    <p>Project 1 description</p>
-  </div>
-
-  <div class="project-card">
-    <h3><a href="project2.html">Project 2</a></h3>
-    <p>Project 2 description</p>
-  </div>
-
-  <div class="project-card">
-    <h3><a href="project3.html">Project 3</a></h3>
-    <p>Project 3 description</p>
-  </div>
-</section>
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>BrightLearn Portfolio</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-
-<!-- Landing Page -->
-<section id="landing">
-  <h1>Welcome to BrightLearn!</h1>
-  <div class="landing-buttons">
-    <button onclick="goToAPI()">Buy Data / Airtime / Electricity</button>
-    <button onclick="goToPortfolio()">View My Portfolio</button>
-  </div>
-</section>
-
-<!-- Portfolio Section -->
-<section id="portfolio" style="display:none;">
-  <h2>My Work & Resources</h2>
-
-  <div id="projects">
-    <h3>Featured Projects</h3>
-    <div class="project-card">
-      <h3>Project 1</h3>
-      <p>Project 1 description</p>
-    </div>
-    <div class="project-card">
-      <h3>Project 2</h3>
-      <p>Project 2 description</p>
-    </div>
-    <div class="project-card">
-      <h3>Project 3</h3>
-      <p>Project 3 description</p>
-    </div>
-  </div>
-
-  <div id="resources">
-    <h3>Ebooks & Presentations</h3>
-    <ul>
-      <li><a href="assets/ebooks/ebook1.pdf" target="_blank" class="btn">Download Ebook 1</a></li>
-      <li><a href="assets/ebooks/ebook2.pdf" target="_blank" class="btn">Download Ebook 2</a></li>
-    </ul>
-
-    <h3>Stickers & Graphics</h3>
-    <ul>
-      <li>Sticker 1</li>
-      <li>Sticker 2</li>
-    </ul>
-  </div>
-
-  <button onclick="backToLanding()">Back</button>
-</section>
-
-<!-- API Section -->
-<section id="api-services" style="display:none;">
-  <h2>API Services</h2>
-  <p>Placeholder for future API integrations (Data, Airtime, Electricity etc.)</p>
-  <button onclick="backToLanding()">Back</button>
-</section>
-
-<script>
-function goToAPI() {
-  document.getElementById('landing').style.display = 'none';
-  document.getElementById('api-services').style.display = 'block';
-}
-
-function goToPortfolio() {
-  document.getElementById('landing').style.display = 'none';
-  document.getElementById('portfolio').style.display = 'block';
-}
-
-function backToLanding() {
-  document.getElementById('portfolio').style.display = 'none';
-  document.getElementById('api-services').style.display = 'none';
-  document.getElementById('landing').style.display = 'block';
-}
-</script>
-<script src="script.js"></script>
 </body>
 </html>
