--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>BrightLearn — Portfolio & Buy Data</title>
 
-  <!-- Hybrid styling (clean + eye-catching) -->
   <style>
     :root{
       --accent:#ffcc00;
@@ -14,6 +13,9 @@
       --bg2:#0b63b8;
       --glass: rgba(255,255,255,0.06);
       --muted: #cfe8ff;
+      --success: #2ecc71;
+      --error: #ff4d4d;
+      --card-bg: rgba(0,0,0,0.16);
     }
     *{box-sizing:border-box;margin:0;padding:0;font-family:Inter,system-ui,Segoe UI,Roboto,'Helvetica Neue',Arial;}
     html,body{height:100%}
@@ -24,17 +26,281 @@
       display:flex;
       align-items:flex-start;
       justify-content:center;
-      padding:36px 16px;
-      gap:20px;
+      padding:36px 18px;
     }
 
     /* container */
     .container{
       width:100%;
-      max-width:1100px;
+      max-width:1200px;
       display:grid;
-      grid-template-columns: 1fr 420px;
+      grid-template-columns: 2fr 1.1fr; /* balanced columns (fixed earlier issue) */
       gap:28px;
+      align-items:start;
+    }
+
+    /* panel (left) */
+    .panel {
+      background: linear-gradient(180deg, rgba(255,255,255,0.03), rgba(255,255,255,0.02));
+      border-radius:14px;
+      padding:28px;
+      box-shadow: 0 8px 30px rgba(0,0,0,0.35);
+      backdrop-filter: blur(6px);
+    }
+
+    header h1{font-size:28px;margin-bottom:6px}
+    header p{color:var(--muted);margin-bottom:18px}
+
+    .projects {display:grid;gap:12px}
+    .card{
+      background: var(--card-bg);
+      padding:14px;border-radius:10px;border:1px solid rgba(255,255,255,0.03);
+    }
+    .card h3{font-size:16px;margin-bottom:6px}
+    .card p{color: #dbeeff;font-size:14px;line-height:1.4}
+
+    .resources{margin-top:18px}
+    .resources ul{list-style:none;margin-top:10px;padding-left:0}
+    .resources li{padding:8px 0;color:var(--muted)}
+
+    /* side (right) */
+    .side {
+      position:relative;
+      padding:20px;border-radius:12px;
+      background: linear-gradient(180deg, rgba(255,255,255,0.04), rgba(255,255,255,0.02));
+      box-shadow: 0 8px 30px rgba(0,0,0,0.35);
+      border:1px solid rgba(255,255,255,0.04);
+      min-width:260px;
+    }
+
+    .side h2{margin-bottom:8px}
+    .muted{color:var(--muted);font-size:14px;margin-bottom:10px}
+
+    /* form */
+    .form-row{display:flex;gap:8px;margin-bottom:10px}
+    .form-row input, .form-row select {
+      flex:1;padding:10px;border-radius:8px;border:1px solid rgba(255,255,255,0.06);
+      background: rgba(0,0,0,0.14); color: #fff; outline:none; font-size:14px;
+    }
+    .form-row input::placeholder{color:rgba(255,255,255,0.55)}
+    .form-row select {appearance:none;padding-left:10px}
+
+    .btn{
+      display:inline-block;
+      background:var(--accent);
+      color:#001f3f;
+      padding:10px 16px;border-radius:10px;
+      border:none;font-weight:700;cursor:pointer;
+      transition:all .18s ease;
+      font-size:14px;
+    }
+    .btn.secondary { background: transparent; color:var(--accent); border:1px solid rgba(255,255,255,0.06); }
+    .btn:disabled { opacity:0.6; transform:none; cursor:not-allowed }
+
+    .btn:hover{background:var(--accent-dark); transform:translateY(-2px)}
+
+    .status{
+      margin-top:12px;padding:12px;border-radius:8px;background:rgba(0,0,0,0.18);
+      color:#fff;font-size:14px;min-height:56px;display:flex;align-items:center;gap:10px;
+    }
+    .status .small{font-size:13px;color:var(--muted)}
+
+    .status.success{border-left:4px solid var(--success); background: rgba(46,204,113,0.07); color: #eafff0}
+    .status.error{border-left:4px solid var(--error); background: rgba(255,77,77,0.06); color: #ffdede}
+    .status.info{border-left:4px solid #ffd633;color:var(--muted); background: rgba(255,214,102,0.03) }
+
+    footer{margin-top:18px;color:#d6e9ff;font-size:13px;text-align:center;grid-column:1/-1}
+
+    @media(max-width:980px){
+      .container{grid-template-columns:1fr; padding-bottom:40px}
+      body{padding:20px}
+    }
+  </style>
+</head>
+<body>
+  <div class="container" role="main">
+    <!-- LEFT: Portfolio / content -->
+    <div class="panel" aria-labelledby="panel-heading">
+      <header id="panel-heading">
+        <h1>Welcome to BrightLearn!</h1>
+        <p>UI/UX • Video Editing • Graphics • Ebooks — portfolio & instant digital purchases.</p>
+      </header>
+
+      <section class="projects" aria-label="Featured projects">
+        <div class="card">
+          <h3>Project 1 — UI Design Sample</h3>
+          <p>High-fidelity mobile UI for an education app — interaction-driven and accessible.</p>
+        </div>
+        <div class="card">
+          <h3>Project 2 — Video Editing Showcase</h3>
+          <p>Short-form promotional video edits highlighting pacing and sound design.</p>
+        </div>
+        <div class="card">
+          <h3>Project 3 — E-book Design</h3>
+          <p>Layout and cover design for technical e-books, optimized for both print and PDF.</p>
+        </div>
+      </section>
+
+      <section class="resources" aria-label="Resources">
+        <h3 style="margin-top:14px;color:var(--muted)">Resources</h3>
+        <ul>
+          <li>📘 Ebooks & Presentations — Downloadable PDFs</li>
+          <li>🎨 Stickers & Graphics — Ready for clients</li>
+          <li>🎞️ Video Editing — Demo reels</li>
+        </ul>
+      </section>
+    </div>
+
+    <!-- RIGHT: Actions / API -->
+    <aside class="side" aria-labelledby="buy-heading">
+      <h2 id="buy-heading">Buy Data / Airtime</h2>
+      <div class="muted">Fast checkout — enter details and press Purchase</div>
+
+      <!-- Form: network / plan / phone / amount -->
+      <div style="margin-bottom:10px">
+        <div class="form-row">
+          <select id="network" aria-label="Network">
+            <option value="MTN">MTN</option>
+            <option value="AIRTEL">AIRTEL</option>
+            <option value="GLO">GLO</option>
+            <option value="9MOBILE">9MOBILE</option>
+          </select>
+          <select id="plan" aria-label="Plan">
+            <option value="1GB">1GB</option>
+            <option value="2GB">2GB</option>
+            <option value="5GB">5GB</option>
+            <option value="10GB">10GB</option>
+          </select>
+        </div>
+
+        <div class="form-row">
+          <input id="phone" type="tel" placeholder="08012345678" aria-label="Phone number" />
+          <input id="amount" type="number" placeholder="Amount (NGN)" aria-label="Amount" />
+        </div>
+      </div>
+
+      <div style="display:flex;gap:10px;align-items:center;">
+        <button id="purchaseBtn" class="btn" aria-live="polite">Purchase</button>
+        <button id="demoBtn" class="btn secondary">Demo</button>
+      </div>
+
+      <div id="statusBox" class="status info" role="status">
+        <span class="small">Ready — fill fields and press Purchase.</span>
+      </div>
+
+      <div style="margin-top:12px;font-size:13px;color:var(--muted)">
+        <strong>Note:</strong> For production, move API key to server-side for security.
+      </div>
+    </aside>
+
+    <footer>© 2025 BrightLearn — Ismail Abdullahi Idris</footer>
+  </div>
+
+  <script>
+    (function(){
+      // ========== CONFIG ==========
+      // Put your real endpoint here; default is the value you gave earlier.
+      // IMPORTANT: If API blocks direct browser requests (CORS), use a server-side proxy.
+      const API_ENDPOINT = 'https://maskawasub.com/api/data';
+      const API_TOKEN = '00f7d2a19bc3e516650133890cc4478034db0014';
+
+      // DOM nodes
+      const purchaseBtn = document.getElementById('purchaseBtn');
+      const demoBtn = document.getElementById('demoBtn');
+      const statusBox = document.getElementById('statusBox');
+      const networkEl = document.getElementById('network');
+      const planEl = document.getElementById('plan');
+      const phoneEl = document.getElementById('phone');
+      const amountEl = document.getElementById('amount');
+
+      function setStatus(text, type='info') {
+        statusBox.className = 'status ' + (type==='success' ? 'success' : type==='error' ? 'error' : 'info');
+        statusBox.innerHTML = '<span class="small">' + text + '</span>';
+      }
+
+      function validateInputs() {
+        const phone = phoneEl.value.trim();
+        const amount = amountEl.value.trim();
+        if (!phone) { setStatus('Please enter phone number', 'error'); return false; }
+        if (!/^\d{7,15}$/.test(phone.replace(/\D/g,''))) {
+          // basic numeric length check
+          setStatus('Please enter a valid phone number digits only', 'error');
+          return false;
+        }
+        if (!amount || Number(amount) <= 0) { setStatus('Please enter valid amount', 'error'); return false; }
+        return true;
+      }
+
+      // Demo (client-side only)
+      demoBtn.addEventListener('click', function(){
+        setStatus('Simulating transaction...', 'info');
+        purchaseBtn.disabled = true;
+        setTimeout(()=> {
+          purchaseBtn.disabled = false;
+          setStatus('✅ Demo: Transaction completed successfully! Transaction ID: DEMO-'+Math.floor(Math.random()*900000+100000), 'success');
+        }, 900);
+      });
+
+      // Purchase (real API call)
+      purchaseBtn.addEventListener('click', function(){
+        if (!validateInputs()) return;
+        setStatus('⏳ Sending request — processing...', 'info');
+        purchaseBtn.disabled = true;
+
+        const payload = {
+          network: networkEl.value,
+          plan: planEl.value,
+          phone: phoneEl.value.trim(),
+          amount: amountEl.value.trim()
+        };
+
+        // Send POST to API_ENDPOINT
+        fetch(API_ENDPOINT, {
+          method: 'POST',
+          headers: {
+            'Content-Type': 'application/json',
+            'Authorization': 'Bearer ' + API_TOKEN
+          },
+          body: JSON.stringify(payload)
+        })
+        .then(async res => {
+          let json = null;
+          try { json = await res.json(); } catch(e) { /* non-json response */ }
+          purchaseBtn.disabled = false;
+
+          if (!res.ok) {
+            // Server returned HTTP error code
+            const msg = (json && (json.message || json.error)) || `HTTP ${res.status} Error`;
+            setStatus('❌ Transaction failed — ' + msg, 'error');
+            return;
+          }
+
+          // If JSON indicates success in common shapes
+          if (json && (json.status === 'success' || json.success === true || json.code === 200 || (json.data && json.data.success))) {
+            const tx = json.transactionId || json.txid || (json.data && (json.data.transactionId || json.data.txid)) || 'N/A';
+            setStatus('✅ Transaction successful! ID: ' + tx, 'success');
+          } else {
+            const msg = (json && (json.message || json.error || JSON.stringify(json))) || 'Unknown response';
+            setStatus('❌ Transaction failed — ' + msg, 'error');
+          }
+        })
+        .catch(err => {
+          purchaseBtn.disabled = false;
+          // Detect CORS-like network failure
+          if (err && err.message && (err.message.includes('Failed to fetch') || err.message.includes('NetworkError'))) {
+            setStatus('⚠️ Network/CORS error: Browser blocked request. Use server-side proxy. See console for details.', 'error');
+            console.error('Network/CORS error sending request:', err);
+            return;
+          }
+          setStatus('⚠️ Network error: ' + err.message, 'error');
+          console.error(err);
+        });
+      });
+
+    })();
+  </script>
+</body>
+</html>      gap:28px;
       align-items:start;
     }
 
