--- a/index.html
+++ b/index.html
@@ -1,343 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>BrightLearn - Smart Access</title>
-
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      font-family: "Poppins", sans-serif;
-      background: linear-gradient(135deg, #0d1117, #1b263b, #0d1117);
-      color: #fff;
-      height: 100vh;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      text-align: center;
-    }
-
-    h1 {
-      font-size: 2.5rem;
-      letter-spacing: 1px;
-      background: linear-gradient(90deg, #00c6ff, #0072ff);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      margin-bottom: 10px;
-    }
-
-    p {
-      color: #d1d1d1;
-      font-size: 1rem;
-      margin-bottom: 40px;
-    }
-
-    .buttons {
-      display: flex;
-      gap: 20px;
-    }
-
-    .btn {
-      padding: 15px 30px;
-      border: none;
-      border-radius: 50px;
-      font-size: 1.1rem;
-      font-weight: 600;
-      cursor: pointer;
-      color: white;
-      transition: 0.3s;
-    }
-
-    .buy-btn {
-      background: linear-gradient(90deg, #00f2fe, #4facfe);
-    }
-
-    .portfolio-btn {
-      background: linear-gradient(90deg, #43e97b, #38f9d7);
-    }
-
-    .btn:hover {
-      transform: scale(1.08);
-      box-shadow: 0 0 15px rgba(255, 255, 255, 0.3);
-    }
-
-    footer {
-      position: absolute;
-      bottom: 20px;
-      color: #888;
-      font-size: 0.9rem;
-    }
-  </style>
-</head>
-
-<body>
-  <h1>Welcome to BrightLearn</h1>
-  <p>Buy Data Instantly or Explore My Creative Portfolio</p>
-
-  <div class="buttons">
-    <button class="btn buy-btn" onclick="buyData()">💳 Buy Data</button>
-    <button class="btn portfolio-btn" onclick="viewPortfolio()">📁 My Portfolio</button>
-  </div>
-
-  <footer>© 2025 BrightLearn by Ismail Abdullahi Idris</footer>
-
-  <script>
-    function buyData() {
-      alert("Transaction Successful ✅");
-      // a nan zaka iya saka API link dinka daga baya
-    }
-
-    function viewPortfolio() {
-      window.location.href = "https://ismailjalam.github.io/ismail-brightlearn-portfolio/";
-    }
-  </script>
-</body>
-</html>}
-
-/* Left Side */
-.panel {
-  background: var(--card-bg);
-  border-radius: 14px;
-  padding: 28px;
-  box-shadow: 0 8px 30px rgba(0,0,0,0.4);
-  backdrop-filter: blur(6px);
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>BrightLearn — Portfolio & Buy Data</title>
+<style>
+:root{
+  --accent:#ffcc00;
+  --accent-dark:#ffd633;
+  --bg1:#06213a;
+  --bg2:#0b63b8;
+  --glass: rgba(255,255,255,0.06);
+  --muted:#cfe8ff;
 }
-
-header h1 {
-  font-size: 28px;
-  margin-bottom: 8px;
-}
-header p {
-  color: var(--muted);
-  margin-bottom: 18px;
-}
-
-/* Portfolio Cards */
-.projects {
-  display: grid;
-  gap: 12px;
-}
-.card {
-  background: rgba(255,255,255,0.03);
-  padding: 16px;
-  border-radius: 10px;
-  border: 1px solid rgba(255,255,255,0.05);
-}
-.card h3 {
-  font-size: 16px;
-  margin-bottom: 6px;
-}
-.card p {
-  color: #dbeeff;
-  font-size: 14px;
-  line-height: 1.4;
-}
-
-/* Resources */
-.resources {
-  margin-top: 20px;
-}
-.resources ul {
-  list-style: none;
-  padding-left: 0;
-}
-.resources li {
-  padding: 6px 0;
-  color: var(--muted);
-}
-
-/* Right Side — Data Purchase */
-.side {
-  background: var(--card-bg);
-  border-radius: 12px;
-  padding: 22px;
-  box-shadow: 0 8px 30px rgba(0,0,0,0.4);
-  backdrop-filter: blur(5px);
-}
-.side h2 {
-  font-size: 20px;
-  margin-bottom: 8px;
-}
-.muted {
-  color: var(--muted);
-  font-size: 14px;
-  margin-bottom: 12px;
-}
-
-.form-row {
-  display: flex;
-  gap: 8px;
-  margin-bottom: 10px;
-}
-.form-row input,
-.form-row select {
-  flex: 1;
-  padding: 10px;
-  border-radius: 8px;
-  border: 1px solid rgba(255,255,255,0.08);
-  background: rgba(0,0,0,0.2);
-  color: #fff;
-  outline: none;
-  font-size: 14px;
-}
-.form-row input::placeholder {
-  color: rgba(255,255,255,0.6);
-}
-
-.btn {
-  display: inline-block;
-  background: var(--accent);
-  color: #001f3f;
-  padding: 10px 16px;
-  border-radius: 10px;
-  border: none;
-  font-weight: 700;
-  cursor: pointer;
-  transition: all .18s ease;
-}
-.btn:hover {
-  background: var(--accent-dark);
-  transform: translateY(-2px);
-}
-
-.status {
-  margin-top: 12px;
-  padding: 12px;
-  border-radius: 8px;
-  background: rgba(0,0,0,0.2);
-  color: #fff;
-  font-size: 14px;
-  min-height: 44px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.status.success {
-  border-left: 4px solid var(--success);
-  background: rgba(46,204,113,0.07);
-  color: #eafff0;
-}
-.status.error {
-  border-left: 4px solid var(--error);
-  background: rgba(255,77,77,0.06);
-  color: #ffdede;
-}
-
-/* Footer */
-footer {
-  margin-top: 18px;
-  color: #d6e9ff;
-  font-size: 13px;
-  text-align: center;
-  grid-column: 1 / -1;
-}
-
-@media(max-width:980px) {
-  .container {
-    grid-template-columns: 1fr;
-  }
-}
+*{box-sizing:border-box;margin:0;padding:0;font-family:Inter,system-ui,Segoe UI,Roboto,'Helvetica Neue',Arial;}
+body{min-height:100vh;background:linear-gradient(135deg,var(--bg1),var(--bg2));color:#fff;display:flex;justify-content:center;align-items:flex-start;padding:40px;}
+.container{display:grid;grid-template-columns:2fr 1fr;gap:28px;max-width:1100px;width:100%;}
+.panel{background:linear-gradient(180deg,rgba(255,255,255,0.03),rgba(255,255,255,0.02));border-radius:14px;padding:28px;box-shadow:0 8px 30px rgba(0,0,0,0.35);backdrop-filter:blur(6px);}
+header h1{font-size:2.5em;margin-bottom:10px;}
+header p{color:var(--muted);margin-bottom:20px;font-size:1.2em;}
+.projects{display:grid;gap:12px;margin-bottom:20px;}
+.card{background: rgba(0,0,0,0.18);padding:14px;border-radius:10px;border:1px solid rgba(255,255,255,0.03);}
+.card h3{font-size:16px;margin-bottom:6px;}
+.card p{color:#dbeeff;font-size:14px;line-height:1.4;}
+.resources ul{list-style:none;padding-left:0;}
+.resources li{padding:6px 0;color:var(--muted);font-size:14px;}
+.side{background:linear-gradient(180deg,rgba(255,255,255,0.04),rgba(255,255,255,0.02));padding:20px;border-radius:12px;box-shadow:0 8px 30px rgba(0,0,0,0.35);border:1px solid rgba(255,255,255,0.04);}
+.side h2{margin-bottom:10px;}
+.form-row{display:flex;gap:8px;margin-bottom:12px;}
+.form-row input,.form-row select{flex:1;padding:10px;border-radius:8px;border:1px solid rgba(255,255,255,0.06);background: rgba(0,0,0,0.14);color:#fff;font-size:14px;outline:none;}
+.form-row input::placeholder{color:rgba(255,255,255,0.5);}
+.btn{display:inline-block;background:var(--accent);color:#001f3f;padding:10px 18px;border-radius:10px;border:none;font-weight:700;cursor:pointer;transition:all .18s ease;font-size:14px;}
+.btn:hover{background:var(--accent-dark);transform:translateY(-2px);}
+.btn.secondary{background:transparent;color:var(--accent);border:1px solid rgba(255,255,255,0.06);}
+.status{margin-top:12px;padding:12px;border-radius:8px;background:rgba(0,0,0,0.18);color:#fff;font-size:14px;min-height:50px;display:flex;align-items:center;gap:10px;}
+.status.success{border-left:4px solid #2ecc71;background: rgba(46,204,113,0.07);color:#eafff0;}
+.status.error{border-left:4px solid #ff4d4d;background: rgba(255,77,77,0.06);color:#ffdede;}
+.status.info{border-left:4px solid #ffd633;color:var(--muted);background: rgba(255,214,102,0.03);}
+footer{margin-top:20px;color:#d6e9ff;font-size:13px;text-align:center;grid-column:1/-1;}
+@media(max-width:980px){.container{grid-template-columns:1fr;}body{padding:20px;}}
 </style>
 </head>
 <body>
-
 <div class="container">
-  <!-- Left Side -->
   <div class="panel">
     <header>
       <h1>Welcome to BrightLearn!</h1>
-      <p>UI/UX • Video Editing • Graphics • Ebooks — Portfolio & Instant Digital Purchases.</p>
+      <p>UI/UX • Video Editing • Graphics • Ebooks — Portfolio & Instant Digital Purchases</p>
     </header>
-
     <section class="projects">
-      <div class="card">
-        <h3>Project 1 — UI Design Sample</h3>
-        <p>High-fidelity mobile UI for an education app — interaction-driven and accessible.</p>
-      </div>
-      <div class="card">
-        <h3>Project 2 — Video Editing Showcase</h3>
-        <p>Short-form promotional video edits highlighting pacing and sound design.</p>
-      </div>
-      <div class="card">
-        <h3>Project 3 — E-book Design</h3>
-        <p>Layout and cover design for technical e-books, optimized for both print and PDF.</p>
-      </div>
+      <div class="card"><h3>Project 1 — UI Design Sample</h3><p>High-fidelity mobile UI for an education app — interaction-driven and accessible.</p></div>
+      <div class="card"><h3>Project 2 — Video Editing Showcase</h3><p>Short-form promotional video edits highlighting pacing and sound design.</p></div>
+      <div class="card"><h3>Project 3 — E-book Design</h3><p>Layout and cover design for technical e-books, optimized for both print and PDF.</p></div>
     </section>
-
-    <div class="resources">
+    <section class="resources">
       <h3>Resources</h3>
       <ul>
         <li>📘 Ebooks & Presentations — Downloadable PDFs</li>
         <li>🎨 Stickers & Graphics — Ready for clients</li>
         <li>🎞️ Video Editing — Demo reels</li>
       </ul>
-    </div>
+    </section>
   </div>
 
-  <!-- Right Side -->
-  <div class="side">
+  <aside class="side">
     <h2>Buy Data / Airtime</h2>
-    <p class="muted">Fast checkout — fill in your details below:</p>
-
-    <div class="form-row">
-      <select id="network">
-        <option>MTN</option>
-        <option>AIRTEL</option>
-        <option>GLO</option>
-        <option>9MOBILE</option>
-      </select>
-    </div>
-
-    <div class="form-row">
-      <select id="plan">
-        <option>500MB</option>
-        <option>1GB</option>
-        <option>2GB</option>
-        <option>5GB</option>
-      </select>
-    </div>
-
-    <div class="form-row">
-      <input type="tel" id="phone" placeholder="08012345678" maxlength="11">
-    </div>
-
-    <div class="form-row">
-      <input type="number" id="amount" placeholder="Amount (₦)">
-    </div>
-
-    <button class="btn" onclick="buyData()">Purchase</button>
-    <div class="status" id="statusBox">Ready — fill fields and press Purchase.</div>
-  </div>
+    <div class="status info">Ready — fill fields and press Purchase.</div>
+    <div class="form-row"><select id="network"><option>MTN</option><option>AIRTEL</option><option>GLO</option><option>9MOBILE</option></select>
+    <select id="plan"><option>1GB</option><option>2GB</option><option>5GB</option><option>10GB</option></select></div>
+    <div class="form-row"><input id="phone" type="tel" placeholder="08012345678"><input id="amount" type="number" placeholder="Amount (NGN)"></div>
+    <div style="display:flex;gap:10px;"><button id="purchaseBtn" class="btn">Purchase</button><button id="portfolioBtn" class="btn secondary">My Portfolio</button></div>
+  </aside>
 </div>
-
-<footer>
-  © 2025 BrightLearn — Ismail Abdullahi Idris
-</footer>
+<footer>© 2025 BrightLearn — Ismail Abdullahi Idris</footer>
 
 <script>
-function buyData() {
-  const phone = document.getElementById('phone').value.trim();
-  const amount = document.getElementById('amount').value.trim();
-  const statusBox = document.getElementById('statusBox');
+const API_ENDPOINT = 'https://maskawasub.com/api/data'; // replace with your endpoint
+const API_TOKEN = 'YOUR_TOKEN_HERE'; // replace with your token
 
-  if (phone.length !== 11 || !amount) {
-    statusBox.textContent = "❌ Please fill all fields correctly.";
-    statusBox.className = "status error";
-    return;
-  }
+document.getElementById('portfolioBtn').addEventListener('click', ()=>{window.location.href='https://yourportfolio.com';});
 
-  statusBox.textContent = "⏳ Processing transaction...";
-  statusBox.className = "status info";
+document.getElementById('purchaseBtn').addEventListener('click', ()=>{
+  const network=document.getElementById('network').value;
+  const plan=document.getElementById('plan').value;
+  const phone=document.getElementById('phone').value.trim();
+  const amount=document.getElementById('amount').value.trim();
+  const statusBox=document.querySelector('.status');
 
-  setTimeout(() => {
-    statusBox.textContent = "✅ Transaction Successful!";
-    statusBox.className = "status success";
-  }, 2000);
-}
+  if(!phone||!amount){statusBox.textContent='❌ Enter valid phone & amount';statusBox.className='status error';return;}
+
+  statusBox.textContent='⏳ Processing transaction...';statusBox.className='status info';
+
+  fetch(API_ENDPOINT,{
+    method:'POST',
+    headers:{'Content-Type':'application/json','Authorization':'Bearer '+API_TOKEN},
+    body:JSON.stringify({network,plan,phone,amount})
+  })
+  .then(res=>res.json())
+  .then(data=>{
+    if(data.status==='success'||data.success){statusBox.textContent='✅ Transaction successful! ID: '+(data.transactionId||data.txid||'N/A');statusBox.className='status success';}
+    else{statusBox.textContent='❌ Transaction failed: '+(data.message||JSON.stringify(data));statusBox.className='status error';}
+  })
+  .catch(err=>{statusBox.textContent='⚠️ Network error: '+err.message;statusBox.className='status error';});
+});
 </script>
-
 </body>
 </html>
