--- a/index.html
+++ b/index.html
@@ -104,5 +104,6 @@ document.getElementById('purchaseBtn').addEventListener('click', ()=>{
   .catch(err=>{statusBox.textContent='⚠️ Network error: '+err.message;statusBox.className='status error';});
 });
 </script>
+<button onclick="window.location.href='portfolio.html'">My Portfolio</button>
 </body>
 </html>
